Preparing for release. Updated version and configuration.

--- a/shinysocks.conf
+++ b/shinysocks.conf
@@ -2,6 +2,10 @@
 
 interfaces {
     interface {
+		; Use to listen on all interfaces
+		; hostname "0.0.0.0"
+	
+		; Use for testing on localhost
         hostname "127.0.0.1"
         port 1080
     }
