CMakeLists changed for Boost 1.77 under Windows (for instance using vcpkg)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.10)
 project(shinysocks)
 
 
 set(Boost_USE_MULTITHREADED ON)
-if (UNIX)
+
 find_package(Boost REQUIRED COMPONENTS
     system
     program_options
@@ -18,13 +18,22 @@ find_package(Boost REQUIRED COMPONENTS
     log
     thread
     )
-endif()
 
 if (WIN32)
-	include_directories(${BOOST_ROOT})
-	message(STATUS "Boost root: ${BOOST_ROOT}")
-	link_directories(${BOOST_LIBRARYDIR})
-	add_definitions(-D_WIN32_WINNT=0x0600)
+    set(LIB_BOOST_PROGRAM_OPTIONS Boost::program_options)
+    set(LIB_BOOST_SERIALIZATION Boost::serialization)
+    set(LIB_BOOST_FILESYSTEM Boost::filesystem)
+    set(LIB_BOOST_DATE_TIME Boost::date_time)
+    set(LIB_BOOST_IOSTREAMS Boost::iostreams)
+    set(LIB_BOOST_SYSTEM Boost::system)
+    set(LIB_BOOST_REGEX Boost::regex)
+    set(LIB_BOOST_CONTEXT Boost::context)
+    set(LIB_BOOST_COROUTINE Boost::coroutine)
+    set(LIB_BOOST_CHRONO Boost::chrono)
+    set(LIB_BOOST_THREAD Boost::thread)
+    set(LIB_BOOST_LOG Boost::log Boost::log_setup)
+    set(BOOST_UNIT_TEST_FRAMEWORK Boost::unit_test_framework)
+    add_definitions(-D_WIN32_WINNT=0x0600)
 	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")
     # Msvc and possible some other Windows-compilers will link
     # to the correct libraries trough #pragma directives in boost headers.
@@ -45,22 +54,20 @@ else ()
     SET(BOOST_UNIT_TEST_FRAMEWORK boost_unit_test_framework)
 endif ()
 
-if (UNIX)
-    set (BOOST_LIBRARIES
-        ${LIB_BOOST_SYSTEM}
-        ${LIB_BOOST_PROGRAM_OPTIONS}
-        ${LIB_BOOST_SERIALIZATION}
-        ${LIB_BOOST_FILESYSTEM}
-        ${LIB_BOOST_DATE_TIME}
-        ${LIB_BOOST_IOSTREAMS}
-        ${LIB_BOOST_REGEX}
-        ${LIB_BOOST_CONTEXT}
-        ${LIB_BOOST_COROUTINE}
-        ${LIB_BOOST_CHRONO}
-        ${LIB_BOOST_LOG}
-        ${LIB_BOOST_THREAD}
-    )
-endif()
+set (BOOST_LIBRARIES
+    ${LIB_BOOST_SYSTEM}
+    ${LIB_BOOST_PROGRAM_OPTIONS}
+    ${LIB_BOOST_SERIALIZATION}
+    ${LIB_BOOST_FILESYSTEM}
+    ${LIB_BOOST_DATE_TIME}
+    ${LIB_BOOST_IOSTREAMS}
+    ${LIB_BOOST_REGEX}
+    ${LIB_BOOST_CONTEXT}
+    ${LIB_BOOST_COROUTINE}
+    ${LIB_BOOST_CHRONO}
+    ${LIB_BOOST_LOG}
+    ${LIB_BOOST_THREAD}
+)
 
 if (UNIX)
     set(THREADLIBS pthread)
@@ -77,7 +84,12 @@ endif()
 add_executable(shinysocks Manager.cpp Listener.cpp Proxy.cpp main.cpp)
 target_compile_definitions(shinysocks PUBLIC -DBOOST_COROUTINE_NO_DEPRECATION_WARNING=1)
 target_compile_definitions(shinysocks PUBLIC -DBOOST_COROUTINES_NO_DEPRECATION_WARNING=1)
-target_link_libraries(shinysocks ${BOOST_LIBRARIES} ${THREADLIBS})
+
+if (UNIX)
+    target_link_libraries(shinysocks ${BOOST_LIBRARIES} ${THREADLIBS})
+elseif (WIN32)
+    target_link_libraries(shinysocks PRIVATE Boost::boost ${BOOST_LIBRARIES})
+endif()
 
 
 install(TARGETS shinysocks RUNTIME DESTINATION bin)
