Fixed build issues under Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.20)
 
+if(WIN32) 
+    set (WINVER "0x0601" CACHE STRING "Value for _WIN32_WINNT")
+    add_definitions(-D_WIN32_WINNT=${WINVER})
+endif()
+
 project(shinysocks
     DESCRIPTION "Socks Proxy server"
     HOMEPAGE_URL https://github.com/jgaa/shinysocks
@@ -17,7 +22,7 @@ if(NOT DEFINED USE_BOOST_VERSION)
     set(USE_BOOST_VERSION 1.69)
 endif()
 
-find_package(Boost REQUIRED COMPONENTS
+find_package(Boost ${USE_BOOST_VERSION} REQUIRED COMPONENTS
     system
     program_options
     serialization
@@ -28,8 +33,11 @@ find_package(Boost REQUIRED COMPONENTS
 add_executable(${PROJECT_NAME} Manager.cpp Listener.cpp Proxy.cpp main.cpp shinysocks.h logging.h)
 add_dependencies(${PROJECT_NAME} logfault)
 
+include_directories(${Boost_INCLUDE_DIR})
+
 set_target_properties(${PROJECT_NAME}
     PROPERTIES
+    CXX_STANDARD 17
     ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
     LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib"
     RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin"
@@ -37,7 +45,7 @@ set_target_properties(${PROJECT_NAME}
 
 target_link_libraries(${PROJECT_NAME}
     PRIVATE
-        $<BUILD_INTERFACE:${Boost_LIBRARIES}>
+        ${Boost_LIBRARIES}
         $<BUILD_INTERFACE:${stdc++fs}>
         $<BUILD_INTERFACE:Threads::Threads>
     )
