--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,8 +21,12 @@ jobs:
             compiler: "msvc"
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+
       - name: Cache
-      - uses: actions/checkout@v3
         uses: actions/cache@v3
         with:
           path: |
