Trying to get the workflow to work

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,6 +2,9 @@ name: CI
 
 on: [push, pull_request]
 
+env:
+    TOOLS_ROOT: ${{ env.HOME }}
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
@@ -68,6 +71,7 @@ jobs:
             if [[ "${{ runner.os }}" == "Windows" ]]; then
                 echo "$env:USERPROFILE\vcpkg" >> $GITHUB_PATH
                 echo "$env:USERPROFILE\ninja" >> $GITHUB_PATH
+                echo "$env:USERPROFILE" > $TOOLS_ROOT
             else
                 echo "$HOME/vcpkg" >> $GITHUB_PATH
                 echo "$HOME/ninja" >> $GITHUB_PATH
@@ -79,9 +83,10 @@ jobs:
           vcpkg install
 
       - name: Build project
+        shell: bash
         run: |
           mkdir build
           cd build
-          cmake .. -G "Ninja" -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/vcpkg/scripts/buildsystems/vcpkg.cmake
+          cmake .. -G "Ninja" -DCMAKE_TOOLCHAIN_FILE=$TOOLS_ROOT/vcpkg/scripts/buildsystems/vcpkg.cmake
           cmake --build .
 
