--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,11 +2,12 @@ name: CI
 
 on: [push, pull_request]
 
+env:
+    TOOLS_ROOT: ""
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-    env:
-        TOOLS_ROOT: ${{ env.HOME }}
     strategy:
       matrix:
         #os: [ubuntu-latest, windows-latest, macos-latest]
@@ -74,6 +75,7 @@ jobs:
             else
                 echo "$HOME/vcpkg" >> $GITHUB_PATH
                 echo "$HOME/ninja" >> $GITHUB_PATH
+                echo "$HOME" >> $TOOLS_ROOT
             fi
         shell: bash
 
