--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,16 +22,16 @@ jobs:
           # - os: "windows-latest"
           #   compiler: "msvc"
         include:
-          - os: ubuntu-latest
-            compiler: gcc
-          - os: ubuntu-latest
-            compiler: clang
-          - os: windows-latest
-            compiler: msvc
-          # - os: macos-latest
+          # - os: ubuntu-latest
           #   compiler: gcc
-          # - os: macos-latest
+          # - os: ubuntu-latest
           #   compiler: clang
+          # - os: windows-latest
+          #   compiler: msvc
+          - os: macos-latest
+            compiler: gcc
+          - os: macos-latest
+            compiler: clang
 
     steps:
       - name: Checkout code
