Fixing curl command for tests. Added vcpg-configuration.json to make Visual Studio work using vcpkg.

--- a/enc_temp_folder/cccc33b219a1a89fda992757c9e7f8b8/ci.yaml
+++ b/enc_temp_folder/cccc33b219a1a89fda992757c9e7f8b8/ci.yaml
@@ -126,7 +126,7 @@ jobs:
           # Give shinysocks some time to start
           sleep 5
           # Run curl command to verify that shinysocks works
-          curl -L --socks5-hostname socks5://localhost:1080 https://raw.githubusercontent.com/jgaa/shinysocks/master/ci/test.txt
+          curl -L --socks5-hostname -x socks5://localhost:1080 https://raw.githubusercontent.com/jgaa/shinysocks/master/ci/test.txt
           # Check the exit code of the curl command
           if [ $? -ne 0 ]; then
             # If the curl command failed, fail the workflow
