enabling build on all platforms

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,12 +12,12 @@ jobs:
     strategy:
       matrix:
         include:
-          # - os: ubuntu-latest
-          #   compiler: gcc
-          # - os: ubuntu-latest
-          #   compiler: clang
-          # - os: windows-latest
-          #   compiler: msvc
+          - os: ubuntu-latest
+            compiler: gcc
+          - os: ubuntu-latest
+            compiler: clang
+          - os: windows-latest
+            compiler: msvc
           - os: macos-latest
             compiler:
 
