--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -103,8 +103,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
             name: boost-system-install-log-${{ matrix.os }}-${{ matrix.arch }}
-            path: /Users/runner/vcpkg/buildtrees/boost-system/install-arm64-osx-dbg-out.log
-            retention-days: 7
+            path: /Users/runner/vcpkg/buildtrees/boost-system/install-${{ matrix.arch }}-dbg-out.log
+            retention-days: 3
 
       - name: Build project
         shell: bash
@@ -128,6 +128,15 @@ jobs:
             -DVCPKG_TARGET_TRIPLET=${{ matrix.triplet }}
           cmake --build .
           popd
+        continue-on-error: true
+
+      - name: Upload vcpkg log on failure
+        if: failure() && steps.install_dependencies.outcome == 'failure'
+        uses: actions/upload-artifact@v4
+        with:
+            name: boost-system-install-log-${{ matrix.os }}-${{ matrix.arch }}
+            path: /Users/runner/vcpkg/buildtrees/boost-system/install-${{ matrix.arch }}-dbg-out.log
+            retention-days: 3
 
       - name: Install curl
         run: |
