--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -125,8 +125,9 @@ jobs:
       - name: Dump vcpkg log on failure
         run: |
             echo "---------------------------------"
-            cat /Users/runner/vcpkg/buildtrees/boost-system/install-${{ matrix.arch }}-dbg-out.log
-            echo
+            cat /Users/runner/vcpkg/buildtrees/boost-system/install-arm64-osx-dbg-out.log
+            echo "---------------------------------"
+            cat /Users/runner/work/shinysocks/shinysocks/build/vcpkg-manifest-install.log
             echo "---------------------------------"
 
       - name: Install curl
